@@ -26,45 +26,25 @@ IF(LCMS_INCLUDE_DIR)
   INCLUDE_DIRECTORIES( ${LCMS_INCLUDE_DIR} )
 ENDIF(LCMS_INCLUDE_DIR)
 
-# Build the static library
+# Build the library
 IF(WIN32)
-  ADD_DEFINITIONS(-DOPJ_STATIC)
+  IF(BUILD_SHARED_LIBS)
+    ADD_DEFINITIONS(-DOPJ_EXPORTS)
+  ELSE(BUILD_SHARED_LIBS)
+    ADD_DEFINITIONS(-DOPJ_STATIC)
+  ENDIF(BUILD_SHARED_LIBS)
 ENDIF(WIN32)
-ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}.static STATIC ${OPENJPEG_SRCS})
-SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.static PROPERTIES CLEAN_DIRECT_OUTPUT 1 OUTPUT_NAME ${OPENJPEG_LIBRARY_NAME} PREFIX "lib")
-SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.static PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
+ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
+SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME} PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
 IF(LCMS_LIB)
-  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}.static ${LCMS_LIB})
+  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME} ${LCMS_LIB})
 ENDIF(LCMS_LIB)
+
 # Install library
-INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}.static
+INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
   EXPORT OpenJPEGTargets
   DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
 )
-
-# If BUILD_SHARED_LIBS is ON, also build the shared library
-IF(BUILD_SHARED_LIBS)
-  # replace flag for static build with flag for shared build
-  IF(WIN32)
-    REMOVE_DEFINITIONS(-DOPJ_STATIC)
-    ADD_DEFINITIONS(-DOPJ_EXPORTS)
-  ENDIF(WIN32)
-  # Create the shared library
-  ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}.shared SHARED ${OPENJPEG_SRCS})
-  SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.shared PROPERTIES OUTPUT_NAME ${OPENJPEG_LIBRARY_NAME})
-  SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.shared PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
-  IF(LCMS_LIB)
-    TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}.shared ${LCMS_LIB})
-  ENDIF(LCMS_LIB)
-  # Install library
-  INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}.shared
-    EXPORT OpenJPEGTargets
-    DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
-  )
-  IF(WIN32)
-    REMOVE_DEFINITIONS(-DOPJ_EXPORTS)
-  ENDIF(WIN32)
-ENDIF(BUILD_SHARED_LIBS)
 
 # Install includes files
 INSTALL(FILES openjpeg.h
